# bio-world-api

./: Makefile  README.md
app/api/: bioanalysis.py
app/schemas/: bioanalysis.py  customer.py
contracts/jsonschema/: order.received.v1.json
deploy/: docker-compose.dev.yml
services/orders-api/: Dockerfile  pyproject.toml
services/orders-api/src/orders_api/: __init__.py  app.py
services/orders-api/src/orders_api/domain/: __init__.py  models.py
services/orders-api/src/orders_api/routes/: __init__.py  orders.py
