[tool.poetry]
name = "orders-api"
version = "0.1.0"
description = ""
authors = ["David Medina <david.medina@sharvik.world>"]
readme = "README.md"
packages = [{include = "orders_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
aiokafka = "^0.12.0"
confluent-kafka = "^2.11.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
